	   0.6.01 or newer, that depends on local caching (Closes: #572721)
	 . Ignore anything but digits and "." when comparing versions
	   (Closes: #578987)
	 . Put archive directory (cache) into /var/backups/duplicity rather
	   than the default /root/.cache/duplicity, unless the user
	   has specified it (Closes: 580213)
	 . Better example.dup documentation. Thanks, Alster!

version 0.9.7 -- January 27, 2010
    backupninja changes
	 . fix bug in reportspace, thanks Dan Garthwaite
	 . do not assume English locale when using date (Closes: #465837)
	 . add 'when = manual' option, that can be used in the global config
	   file or in a given backup action file. Thanks Tuomas Jormola for the
	   preliminary patch (Closes: #511299)
	 . new reportinfo option: when set, messages sent by handlers with
	   "info" are included in the report e-mail (closes #563734)
	 . reportspace: skip non-directories and places that don't exist on the
	   local filesystem (Closes: #536049)
	 . set BACKUPNINJA_DEBUG when invoked with -d (Closes: #537266)
    lib changes
	easydialog:
	 . Allow form fields input to grow up to 100 chars (Closes: #562249)
    handler changes
	ldap:
	 . Use gzip's --rsyncable option.
	 . Use bash pipefail option when needed so that failed dumps are
	   reported as such.
	maildir:
	 . fix location of deleted_on file
	 . add missing destid_file options to ssh connections
	 . added sshoptions variable for arbitrary ssh options
	 . updated example file to include destid_file, destport and sshoptions
	 . use any subdirectories not just "a" to "z". Thanks Chris Nolan! (Redmine#606)
	mysql:
	 . Options passed to mysqldump are now customizable with the new
	   sqldumpoptions configuration variable. Thanks to Chris Lamb for his
	   preliminary patch (Closes: #502966)
	 . Hide 'mysqladmin ping' output, to prevent confusing the user in
	   case mysqld is running but the authentication fails, which apparently
	   does not prevent mysqldump to work.