@@ -15,6 +15,8 @@ version 0.9.8 -- UNRELEASED
 	   than the default /root/.cache/duplicity, unless the user
 	   has specified it (Closes: 580213)
 	 . Better example.dup documentation. Thanks, Alster!
+	 . Added ftp_password option to securely transmit the FTP password
+	   from backupninja to duplicity.
 
 version 0.9.7 -- January 27, 2010
     backupninja changes
